--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://kit.fontawesome.com/dcb22fbf87.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/gna2wzl.css">
 </head>
 <body>
 <app-root></app-root>
